

This change was necessary to provide much higher flexibility and enable several new long-awaited features:
- Font subsetting - this feature includes only necessary font glyphs in the output document, greatly reducing the file size, especially when using glyph-rich fonts supporting multiple languages,
- Improved text-related capabilities, including but not limited to text justification, bi-directionality, enhanced line breaking algorithms, more styles for text decoration, word spacing, and more,
- Introduced additional document compression to further reduce file size,
- Integrated native SVG support,
- In future releases: enhanced accessibility through support for PDF tags.


Other changes:
- Removed the SkiaSharp dependency, thereby making QuestPDF a standalone library,
- Updated the Lato font to the latest version (2.015),
- Included licenses of the third-party dependencies in the NuGet package,
- Included a list of Contributors in the NuGet package to acknowledge the valuable input from our Community in improving QuestPDF.


Unfortunately, this release also introduces breaking changes:
- Removed support for injecting SkiaSharp content directly into the document. It is still possible to integrate SkiaSharp through vector and raster graphics; please consult the documentation for more details,
- Removed support for platforms: Android, iOS, UWP, WASM, and Linux-Alpine. We are currently investigating reintroducing support for WASM and Linux-Alpine in future releases.

We would like to thank the SkiaSharp project, its maintainers, and contributors, for creating a fantastic graphics library. It was a fantastic foundation for QuestPDF for over 3 years.


Version 2024.3.1
- Fix: on the Windows platform, the "Could not find an appropriate font fallback for the following glyphs: $U-000D" exception is thrown when the "QuestPDF.Settings.CheckIfAllTextGlyphsAreAvailable" is set true, and the "TextDescriptor.Line" method is used (that inserts the '\r' character).